--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -7,6 +7,7 @@
     tools:context=".ui.chat.ChatFragment">
 
     <TextView
+        android:id="@+id/cchat"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Chat"
@@ -17,5 +18,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <include
+        android:id="@+id/checked_email"
+        layout="@layout/check_email"
+        android:visibility="gone"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
