--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -16,8 +16,8 @@
             app:popUpTo="@+id/splashFragment"
             app:popUpToInclusive="true"/>
         <action
-            android:id="@+id/action_splashFragment_to_homeFragment"
-            app:destination="@id/homeFragment" />
+            android:id="@+id/action_splashFragment_to_aboutFragment"
+            app:destination="@id/aboutFragment" />
     </fragment>
     <fragment
         android:id="@+id/homeFragment"
@@ -27,6 +27,9 @@
         <action
             android:id="@+id/action_homeFragment_to_homeInfoFragment"
             app:destination="@id/homeInfoFragment" />
+        <action
+            android:id="@+id/action_homeFragment_to_filtersFragment"
+            app:destination="@id/filtersFragment" />
     </fragment>
     <fragment
         android:id="@+id/chatFragment"
@@ -35,10 +38,14 @@
         tools:layout="@layout/fragment_chat" />
 
     <fragment
-        android:id="@+id/favoriteFragment"
-        android:name="atlas.soft.newskz.ui.favorite.FavoriteFragment"
-        android:label="fragment_favorite"
-        tools:layout="@layout/fragment_favorite" />
+        android:id="@+id/aboutFragment"
+        android:name="atlas.soft.newskz.ui.about.AboutFragment"
+        android:label="fragment_about"
+        tools:layout="@layout/fragment_about" >
+        <action
+            android:id="@+id/action_aboutFragment_to_myCompanyFragment"
+            app:destination="@id/myCompanyFragment" />
+    </fragment>
     <fragment
         android:id="@+id/homeInfoFragment"
         android:name="atlas.soft.newskz.ui.homeInfo.HomeInfoFragment"
@@ -50,11 +57,11 @@
         android:label="fragment_authorization"
         tools:layout="@layout/fragment_authorization" >
         <action
-            android:id="@+id/action_authorizationFragment_to_homeFragment"
-            app:destination="@id/homeFragment" />
-        <action
             android:id="@+id/action_authorizationFragment_to_registerFragment"
             app:destination="@id/registerFragment" />
+        <action
+            android:id="@+id/action_authorizationFragment_to_aboutFragment"
+            app:destination="@id/aboutFragment" />
     </fragment>
     <fragment
         android:id="@+id/profileFragment"
@@ -64,6 +71,9 @@
         <action
             android:id="@+id/action_profileFragment_to_myProfileFragment"
             app:destination="@id/myProfileFragment" />
+        <action
+            android:id="@+id/action_profileFragment_to_myProjectFragment"
+            app:destination="@id/myProjectFragment" />
     </fragment>
     <fragment
         android:id="@+id/registerFragment"
@@ -75,4 +85,32 @@
         android:name="atlas.soft.newskz.ui.profile.myProfile.MyProfileFragment"
         android:label="fragment_my_profile"
         tools:layout="@layout/fragment_my_profile" />
+    <fragment
+        android:id="@+id/filtersFragment"
+        android:name="atlas.soft.newskz.ui.filter.FiltersFragment"
+        android:label="fragment_filters"
+        tools:layout="@layout/fragment_filters" >
+        <action
+            android:id="@+id/action_filtersFragment_to_searchInfoFragment"
+            app:destination="@id/searchInfoFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/searchInfoFragment"
+        android:name="atlas.soft.newskz.ui.filter.SearchInfoFragment"
+        android:label="fragment_search_info"
+        tools:layout="@layout/fragment_search_info" >
+        <action
+            android:id="@+id/action_searchInfoFragment_to_homeInfoFragment"
+            app:destination="@id/homeInfoFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/myCompanyFragment"
+        android:name="atlas.soft.newskz.ui.about.myCompany.MyCompanyFragment"
+        android:label="fragment_my_company"
+        tools:layout="@layout/fragment_my_company" />
+    <fragment
+        android:id="@+id/myProjectFragment"
+        android:name="atlas.soft.newskz.ui.profile.myProject.MyProjectFragment"
+        android:label="fragment_my_project"
+        tools:layout="@layout/fragment_my_project" />
 </navigation>
