--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="purple_200">#FFA200</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#006C99</color>
-    <color name="teal_200">#006C99</color>
+    <color name="teal_200">#362D68</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
 
@@ -12,6 +12,7 @@
     <color name="white2">#CACACA</color>
     <color name="white3">#A6A6A6</color>
     <color name="white4">#8A8A8A</color>
+    <color name="white_alpha">#CDFFFFFF</color>
 
     <color name="black_txt">#202020</color>
     <color name="black_txt2">#404040</color>
